// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.IpLocator";
option java_outer_classname = "IpLocator";
option objc_class_prefix = "HLW";

package IpGeo;

// The events service definition.
service IpLocator {
  // Sends an event
  rpc Find (LocationRequest) returns (LocationDetails) {}
}

// The sending message containing the sender's name and its message.
message LocationRequest {
  string ip = 1;
  string app = 2;
}

// The response message containing the content.
message LocationDetails {
  string country = 1;
  string city = 2;
  double longitude = 3;
  double latitude = 4;
}